<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vibrantbackground"
    tools:context=".Login">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"
        android:background="#C6C5BC"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        android:shadowColor="#230F0F"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColorHint="#0E0202"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="302dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:background="#C6C5BC"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:shadowColor="#1E0D0D"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColorHint="#0E0202"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="159dp"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/notRegistered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/notRegistered"
        android:layout_width="183dp"
        android:layout_height="36dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="63dp"
        android:text="@string/notRegistered"
        android:textColor="#4A18A3"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="99dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="312dp"
        android:text="@string/signUp"
        android:textColor="#E91E63"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notRegistered"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:srcCompat="@drawable/snapchat" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="92dp"
        android:text="@string/rememberMe"
        app:layout_constraintBottom_toTopOf="@+id/notRegistered"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />
</androidx.constraintlayout.widget.ConstraintLayout>