<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="58dp"
        android:background="#C6C5BC"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        android:shadowColor="#230F0F"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColorHint="#0E0202"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="302dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="100dp"
        android:background="#C6C5BC"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:shadowColor="#1E0D0D"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColorHint="#0E0202"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="159dp"
        android:onClick="signUp"
        android:text="@string/signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:srcCompat="@drawable/snapchat" />

</androidx.constraintlayout.widget.ConstraintLayout>